# underwriting-ai-agent-demos

./: .gitignore  README.md  STREAMLIT_CONVERSION_COMPLETE.md  WEB_FRONTEND_GUIDE.md  main.py  pyproject.toml  requirements.txt  underwriting-ai-agent-demos.code-workspace  underwriting_rules.json
config/rules/: underwriting_rules.json  underwriting_rules_conservative.json  underwriting_rules_liberal.json
docs/: AB_TESTING_GUIDE.md  PROJECT_SUMMARY.md  README.md  ab_testing_framework.md  application_structure.md  requirements.txt
tests/: __init__.py  conftest.py
underwriting/: __init__.py
underwriting/ai/: __init__.py  prompts.py
underwriting/cli/: __init__.py  ab_testing.py  basic.py  streamlit_server.py  web_server.py
underwriting/core/: __init__.py  engine.py  exceptions.py  models.py
underwriting/data/: __init__.py  sample_generator.py
underwriting/streamlit/: __init__.py  app.py
underwriting/streamlit/pages/: 01_🏠_Home.py  02_📋_Evaluate.py  03_🧪_AB_Testing.py  04_⚙️_Configuration.py  05_📚_Documentation.py
underwriting/testing/: __init__.py  ab_engine.py  statistical_analysis.py
underwriting/utils/: __init__.py  config.py  env_loader.py  logging.py
underwriting/web/: __init__.py  app.py  forms.py  routes.py
underwriting/web/static/css/: style.css
underwriting/web/static/js/: app.js
underwriting/web/templates/: base.html  evaluate.html  index.html  results.html
underwriting/web/templates/errors/: 404.html  500.html
underwriting_applicants/: sample_applicants.py
underwriting_engines/: underwriting_engine.py
underwriting_models/: models.py
